# lead-scorer

./: .env.template  .gitignore  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  project-automation.yml
core/: base_workflow.py  config_manager.py
dashboard/: app.py
docker/prometheus/: prometheus.yml
scripts/: run_dev.sh
tests/: test_infrastructure.py
