[tool.poetry]
name = "lead-scorer"
version = "0.1.0"
description = "Multi-Org Predictive Lead Scoring & Insight Engine"
authors = ["ajthr <your-email@example.com>"]
readme = "README.md"
packages = [{include = "core"}, {include = "services"}, {include = "workflows"}, {include = "common"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
celery = {extras = ["redis"], version = "^5.3.6"}
sqlalchemy = "^2.0.25"
psycopg2-binary = "^2.9.9"
pgvector = "^0.2.4"
pydantic = "^2.6.1"
pydantic-settings = "^2.1.0"
boto3 = "^1.34.34" # MinIO/S3
scikit-learn = "^1.4.0"
xgboost = "^2.0.3"
catboost = "^1.2.2"
optuna = "^3.5.0"
mlflow = "^2.10.2"
shap = "^0.44.0"
openai = "^1.12.0" # For LLM Narrator
streamlit = "^1.31.0" # Management Dashboard
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.5"
pytest-mock = "^3.12.0"
ruff = "^0.2.1"
mypy = "^1.8.0"
pre-commit = "^3.6.0"
types-requests = "^2.31.0"
types-boto3 = "^1.34.34"

[tool.ruff]
line-length = 88
target-version = "py311"
select = ["E", "F", "B", "I", "N", "UP", "PL", "RUF"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
exclude = ["tests/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
